# Constantine

./: .gitignore  .travis.yml  CMakeLists.txt  FindClang.cmake  README  README.md  build.sh  configure  wrapper
.github/workflows/: build_on_push.yml
cmake/: FindClang.cmake  FindLit.cmake
sources/: CMakeLists.txt  ConstantAnalysis.cpp  ConstantAnalysis.hpp  DeclarationCollector.cpp  DeclarationCollector.hpp  ExportedSymbolsList  IsCXXThisExpr.hpp  IsFromMainModule.hpp  IsItFromMainModule.hpp  ModuleAnalysis.cpp  ModuleAnalysis.hpp  PluginMain.cpp  PrintFunctionNames.cpp  ScopeAnalysis.cpp  ScopeAnalysis.hpp  UsageCollector.cpp  UsageCollector.hpp  VariableChecker.cpp  VariableChecker.hpp  VariableUsages.cpp  VariableUsages.hpp
src/: CMakeLists.txt  IsCXXThisExpr.hpp  ScopeAnalysis.cpp
src/libconstantine/: CMakeLists.txt  PluginMain.cpp
src/libconstantine_a/: CMakeLists.txt  DeclarationCollector.cpp  DeclarationCollector.hpp  ModuleAnalysis.cpp  ModuleAnalysis.hpp  ScopeAnalysis.cpp  ScopeAnalysis.hpp
src/libdebug/: CMakeLists.txt  DebugModuleAnalysis.cpp  DebugModuleAnalysis.hpp  PluginMain.cpp
src/libdebugfunctiondeclarations/: CMakeLists.txt  PluginMain.cpp
src/libdebugvariablechanges/: CMakeLists.txt  PluginMain.cpp
src/libdebugvariabledeclarations/: CMakeLists.txt  PluginMain.cpp
src/libdebugvariableusages/: CMakeLists.txt  PluginMain.cpp
test/: CMakeLists.txt  first.cpp  lit.cfg  lit.site.cfg.in
test/AnalysisFindsChanges/: AssignmentOperator.cpp  ByPointer.cpp  ByReference.cpp  ByValue.cpp  ComplexMemberAccess.cpp  Constructor.cpp  FunctionCall.cpp  MemberAccess.cpp  SimpleType.cpp  TemplateMemthodCall.cpp
test/AnalysisFindsUsage/: AllInOne.cpp
test/CastDetection/: CStyleCast.c  CStyleCast.cpp  ConstCast.cpp  first.cpp
test/DebugArguments/: Funcions.cpp  Methods.cpp
test/DebugFunctionDeclarations/: Funcions.cpp  Methods.cpp  TemplateFuncions.cpp  TemplateMethods.cpp
test/DebugLocalVariables/: Funcions.cpp  Methods.cpp
test/DebugVariableDeclarations/: ArgumentsInFunctions.cpp  ArgumentsInMethods.cpp  AttributesInForwardDeclaredClass.cpp  LocalsInFunctions.cpp  LocalsInMethods.cpp  LocalsInTemplateFunctions.cpp  LocalsInTemplateMethods.cpp
test/PseudoConstAnalysis/: ArgumentsInVirtualMethods.cpp  Arrays.cpp  AssignmentOperatorDetected.cpp  Bug21.cpp  CollectArguments.cpp  CollectFreeVariables.cpp  CollectLocalVariables.cpp  DefaultArgs.cpp  DetectAtomicChanges.cpp  DetectChangesViaFunctionCall.cpp  DetectChangesViaPointer.cpp  DetectChangesViaReference.cpp  DetectObjectChanges.cpp  FunctionCalls.cpp  FunctorOperator.cpp  GlobalVariables.cpp  MethodConstness.cpp  ObjectVariables.cpp  OstreamBug.cpp  Placement.cpp  ReferenceTracking.cpp  SimpleArguments.cpp  SimplePointers.cpp  SimpleVariables.cpp  SingleByValue.cpp
test/PseudoConstAnalysis/ReferenceTracking/: Arrays.cpp  ChainReferences.cpp  ConditionalOperator.cpp  DoubleMemberVariables.cpp  LocalVariables.cpp  MemberVariables.cpp
